--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme: minima
 title: Matt Dutson
-name: Test
+show_excerpts: true
 header_pages:
   - coursework.md
+  - posts.html
+plugins:
+  - jekyll-feed
