--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 theme: minima
 title: Matt Dutson
-show_excerpts: true
+name: Test
 header_pages:
   - coursework.md
-  - posts.html
-plugins:
-  - jekyll-feed
